--- a/machinekit-documentation/getting-started/getting-started-platform.asciidoc
+++ b/machinekit-documentation/getting-started/getting-started-platform.asciidoc
@@ -16,6 +16,7 @@ Getting started with:
 
 ################################################################################################################################################
 ################################################################################################################################################
+
 MACHINEKIT QUICK START FOR BEAGLEBONE
 
 	Tested on element14 Beaglebone black rev C. 
@@ -39,7 +40,8 @@ NOTE:
 
 MACHINEKIT PREPARE uSD/INSTALL
 	
-	These steps will create a bootable machinekit uSD card to run machinekit without flashing it to the eMMC(onboard memory).
+	These steps will create a bootable machinekit uSD card to run machinekit 
+	Without flashing it to the eMMC(onboard memory).
 	The Beaglebone is connected over usb to a computer running linux.
 	Commands after: "~$" are executed on the linux computer
 	Commands after: "machinekit@beaglebone:~$" are executed on the beaglebone 
@@ -54,7 +56,8 @@ MACHINEKIT PREPARE uSD/INSTALL
 		~$ unxz bone-debian-7.8-machinekit-armhf-2015-03-15-4gb.img.xz
 
 
-	write image to uSD card on the linux computer (this can take a while and even a bit longer, uSD data will be overwriten!)
+	write image to uSD card on the linux computer (this can take a while and even a bit longer)
+	uSD Card data will be overwriten
 	(make sure where your is uSD at, i.e. for /dev/mmcblk0 use)
 		~$ sudo dd if=bone-debian-7.8-machinekit-armhf-2015-03-15-4gb.img of=/dev/mmcblk0 bs=4096k oflag=direct
 	(if your uSD is at /dev/sdb it would be like following)
@@ -119,6 +122,7 @@ TODO:
 
 ################################################################################################################################################
 ################################################################################################################################################
+
 MACHINEKIT CONFIGURE EQEP ENCODERS
 	 
 	This will show howto manualy setup and test hardware supported encoder feedback
