--- a/machinekit-documentation/documentation-matrix.asciidoc
+++ b/machinekit-documentation/documentation-matrix.asciidoc
@@ -6,12 +6,11 @@
 |===
 
 .Documentation Matrix
-[cols="6*", options="header", options="center"]
-|===
+[cols="5*", options="header", options="center"]
+|===============================================================================
 |
 | Getting Started
 | HAL
-| Setting up
 | Developing
 | Documentation
 
@@ -21,12 +20,14 @@
 |
 |
 |
-|
 
 | Developing
 |
-| Components
-| link:developing/developing.asciidoc[Setting up a development machine]
+a|
+* Components
+* realtime
+* userland
+* python
 |
 |
 
@@ -35,37 +36,33 @@
 |
 |
 |
-|
 
 | Examples
-|
-|
 | link:setting-up/machine-setting-up-examples.asciidoc[Example machines]
+|
 |
 |
 
 | How to
 |
 |
-|
 | link:buildbot/interpret-buildbot-results.asciidoc[Interpret buildbot results]
-|
+| link:documenting/updating-your-fork.asciidoc[Update your github fork]
 
 | Tools
 |
 |
 |
 |
-|
 
-| setting up
+| Setting up
 |
+a|
+* HAL configuration
+* Python configuration
+| link:developing/developing.asciidoc[Setting up a development machine]
 |
-|
-| link:setting-up/developing-setting-up-examples.asciidoc[Example machines]
-|
-
-|===
+|===============================================================================
 
 [cols="3*"]
 |===
