--- a/machinekit-documentation/getting-help.asciidoc
+++ b/machinekit-documentation/getting-help.asciidoc
@@ -50,11 +50,11 @@ So you did your homework as above, and still no resolution: file a  link:https:/
 
 . Make up a *descriptive title*: 'the foobar HAL component does not load' is a lot more helpful than 'Yikes, Machinekit bombs on startup'. Narrow things down a bit, at least to a particular subsystem - it will improve your chances for a quick resolution. For example, 'Gcode-interpreter does not add 1 to 1 properly' will likely raise the attention of persons familiar with the interpreter more reliably than stating 'Machinekit math broken'.
 
-. Include all the relevant detail:
+. Include *all *the relevant detail:
 
-.. platform. Add the output of the 'uname -a'.
-.. Before you run the program, do this to increase the level of detail in the log: `export DEBUG=5` 
-.. Paste the complete output of the shell command if any.
+.. *platform*. Add the output of the 'uname -a'.
+.. Before you run the program, do this to *increase the level of detail in the log*: `export DEBUG=5` 
+.. Paste the *complete output of the shell command* if any.
 ..  Use your text editor to *copy the contents of `/var/log/linuxcnc.log`* to
   link:http://pastebin.com[pastebin.com] and put the generated URL like this
   one link:http://pastebin.com/q3w7K4py[http://pastebin.com/q3w7K4py] into
