--- a/machinekit-documentation/getting-help.asciidoc
+++ b/machinekit-documentation/getting-help.asciidoc
@@ -52,8 +52,8 @@ So you did your homework as above, and still no resolution: file a  link:https:/
 
 . Include *all* the relevant detail:
 
-.. *platform*. Add the output of the 'uname -a'.
-.. If you are running Xenomai, include the output of 'dmesg |grep Xenomai' .
+.. *platform*. Add the output of the `uname -a`.
+.. If you are running *Xenomai*, include the output of `dmesg |grep Xenomai` .
 .. Before you run the program, do this to *increase the level of detail in the log*: `export DEBUG=5` 
 .. Paste the *complete output of the shell command* if any.
 ..  Use your text editor to *copy the contents of `/var/log/linuxcnc.log`* to
